--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/register": "^7.8.3",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-config-strongloop": "^2.1.0",
-    "morgan": "^1.9.1"
+    "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.2.3",
+    "morgan": "^1.9.1",
+    "prettier": "^1.19.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -25,7 +29,20 @@
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
+    "lint-staged": "^10.0.7",
     "mongoose": "^5.9.2",
     "v-response": "^1.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --ignore-path .gitignore .",
+      "git add",
+      "npx prettier --write"
+    ]
   }
 }
